gcc/testsuite/gdc.test/compilable/imports/test10752.d
module imports.test10752;
private int priv;
