gcc/testsuite/gdc.test/fail_compilation/imports/spell9644b.d
module imports.spell9644b;

private int prib;
